apps/services/nitter/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nitter
  labels:
    app: nitter
  annotations:
    link.argocd.argoproj.io/external-link: https://twt.gruber.dev.br
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nitter
  template:
    metadata:
      labels:
        app: nitter
    spec:
      imagePullSecrets:
        - name: canistry
      containers:
        - name: nitter
          image: cloud.canister.io:5000/gr/nitter:v0.0.4
          ports:
          - name: web
            containerPort: 8080
            protocol: TCP
          volumeMounts:
          - name: nitter-conf
            mountPath: /src/nitter.conf
            subPath: nitter.conf
          resources:
            limits:
              cpu: 250m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
      - name: nitter-conf
        configMap:
          name: nitter-cm
