apps/services/nitter/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nitter
  labels:
    app: nitter
  annotations:
    tailscale.com/hostname: "twitter"
spec:
  ports:
  - name: web
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: nitter
  type: LoadBalancer
  loadBalancerClass: tailscale
---
apiVersion: v1
kind: Service
metadata:
  name: nitter-internal
  labels:
    app: nitter
spec:
  selector:
    app: nitter
  ports:
  - name: web
    port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
